--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+venv/
+
+#Pycharm files
+.idea/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
